# cmake-nmake-vscode-example

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build.bat  setup.bat
src/: main.cpp
